# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  Chip8_Emulator  README.md
src/: chip8.cpp  chip8.h  main.cpp
test/: chip8_test.cpp
